# micro-service

./: .gitignore  CMakeLists.txt  ExternalBoost.cmake  LICENSE  README.md  main.cpp
Server/: CMakeLists.txt
Server/include/Server/: Server.h
Server/src/: Server.cpp
core/: CMakeLists.txt
core/include/core/database/: DatabaseInterface.hpp  Entity.hpp
core/include/core/repository/: RepositoryInterface.hpp
core/include/core/service/: ServiceControllerInterface.hpp
core/src/database/: DatabaseInterface.cpp  Entity.cpp
extras/: MarineSanctuary.txt  PettingZoo.txt  ReptileRetreat.txt  Safari.txt  TropicalAviary.txt  zoo.puml
rest/: CMakeLists.txt
rest/include/rest/: Alias.hpp  Connection.hpp  Controller.hpp  HttpWorker.hpp  Request.hpp  Response.hpp  Route.hpp
rest/src/: Connection.cpp  Controller.cpp  HttpWorker.cpp
tests/: CMakeLists.txt  MicroServiceTests.cpp
zoo/: CMakeLists.txt
zoo/include/zoo/: Animal.hpp  Mammal.hpp
zoo/include/zoo/animal/: Animal.hpp  Bird.hpp  Fish.hpp  Reptile.hpp
zoo/include/zoo/compound/: Compound.hpp
zoo/include/zoo/database/: DatabaseInterface.hpp  Entity.hpp  InMemoryDatabase.hpp
zoo/include/zoo/services/: AnimalRepository.hpp  AnimalService.hpp  AnimalServiceController.hpp  CompoundRepository.hpp  CompoundService.hpp  ServiceController.hpp  ServiceControllerInterface.hpp  ServiceInterface.hpp
zoo/private/: Utils.cpp  Utils.hpp
zoo/private/zoo/: Utils.cpp  Utils.hpp
zoo/src/: Animal.cpp
zoo/src/animal/: Animal.cpp
zoo/src/compound/: Compound.cpp
zoo/src/database/: Entity.cpp  InMemoryDatabase.cpp
zoo/src/services/: AnimalRepository.cpp  AnimalService.cpp  AnimalServiceController.cpp  CompoundRepository.cpp  CompoundService.cpp  ServiceController.cpp
